--- a/RecipeBox/RecipeResultCell.xib
+++ b/RecipeBox/RecipeResultCell.xib
@@ -1,11 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeResultCell" id="4mT-Z8-Wys" customClass="RecipeResultCell" customModule="RecipeBox" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4mT-Z8-Wys" id="hOx-MW-RKy">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEe-SR-GIG">
+                        <rect key="frame" x="120" y="24" width="52" height="21"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <font key="NSFont" metaFont="system" size="17"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8hi-4y-fWf">
+                        <rect key="frame" x="9" y="5" width="90" height="88"/>
+                        <color key="tintColor" red="0.93817383050000003" green="0.42620047929999999" blue="0.36924731729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="90" id="DhO-nR-Fut"/>
+                            <constraint firstAttribute="height" constant="90" id="cCn-Nf-PBR"/>
+                        </constraints>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="thin"/>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="8hi-4y-fWf" firstAttribute="top" secondItem="hOx-MW-RKy" secondAttribute="top" constant="4" id="AZu-a3-2ug"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="JEe-SR-GIG" secondAttribute="bottom" constant="34" id="HlL-bU-vtk"/>
+                    <constraint firstItem="8hi-4y-fWf" firstAttribute="leading" secondItem="hOx-MW-RKy" secondAttribute="leading" constant="9" id="MGE-QP-8e5"/>
+                    <constraint firstItem="JEe-SR-GIG" firstAttribute="top" secondItem="hOx-MW-RKy" secondAttribute="topMargin" constant="13" id="QLe-RV-exc"/>
+                    <constraint firstItem="JEe-SR-GIG" firstAttribute="leading" secondItem="8hi-4y-fWf" secondAttribute="trailing" constant="21" id="ShR-BT-pd0"/>
+                    <constraint firstAttribute="bottom" secondItem="8hi-4y-fWf" secondAttribute="bottom" constant="4" id="dFN-6H-tuN"/>
+                </constraints>
+            </tableViewCellContentView>
+            <color key="backgroundColor" red="0.99484437699999995" green="0.94826608899999998" blue="0.84429597850000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <connections>
+                <outlet property="recipeImageView" destination="8hi-4y-fWf" id="sNG-jH-o3C"/>
+                <outlet property="recipeNameLabel" destination="JEe-SR-GIG" id="fXt-Gj-CwB"/>
+            </connections>
+            <point key="canvasLocation" x="4" y="95.352323838080963"/>
+        </tableViewCell>
     </objects>
+    <resources>
+        <image name="square" catalog="system" width="128" height="114"/>
+    </resources>
 </document>
