--- a/RecipeBox/RecipeResultCell.xib
+++ b/RecipeBox/RecipeResultCell.xib
@@ -11,16 +11,18 @@
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeResultCell" id="4mT-Z8-Wys" customClass="RecipeResultCell" customModule="RecipeBox" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4mT-Z8-Wys" id="hOx-MW-RKy">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4mT-Z8-Wys" id="hOx-MW-RKy">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEe-SR-GIG">
-                        <rect key="frame" x="120" y="24" width="52" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEe-SR-GIG">
+                        <rect key="frame" x="120" y="24" width="228" height="25"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
-                                    <font key="NSFont" metaFont="system" size="17"/>
+                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <font key="NSFont" size="18" name="Avenir-Book"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
                         </attributedString>
@@ -38,7 +40,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="8hi-4y-fWf" firstAttribute="top" secondItem="hOx-MW-RKy" secondAttribute="top" constant="4" id="AZu-a3-2ug"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="JEe-SR-GIG" secondAttribute="bottom" constant="34" id="HlL-bU-vtk"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="JEe-SR-GIG" secondAttribute="trailing" constant="11" id="BTG-9O-PSn"/>
                     <constraint firstItem="8hi-4y-fWf" firstAttribute="leading" secondItem="hOx-MW-RKy" secondAttribute="leading" constant="9" id="MGE-QP-8e5"/>
                     <constraint firstItem="JEe-SR-GIG" firstAttribute="top" secondItem="hOx-MW-RKy" secondAttribute="topMargin" constant="13" id="QLe-RV-exc"/>
                     <constraint firstItem="JEe-SR-GIG" firstAttribute="leading" secondItem="8hi-4y-fWf" secondAttribute="trailing" constant="21" id="ShR-BT-pd0"/>
